--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -42,6 +42,19 @@
   cursor: default;
 }
 
+.popup__spinner-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.8); /* Fondo semitransparente */
+  z-index: 2000; /* Asegúrate de que este valor sea mayor que el z-index de tu popup */
+}
+
 .popup__title {
   font-size: 24px;
   color: #000000;
